// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarNav toggles nav collapse on button click 1`] = `
<DocumentFragment>
  <span
    data-focus-scope-start="true"
    hidden=""
  />
  <nav
    aria-expanded="true"
    class="sc-bczRLJ fLqWsF sc-jSMfEi"
    data-testid="sidebarnav"
  >
    <button
      aria-label="Collapse navigation"
      class="sc-eCYdqJ eKnMif"
      data-testid="sidebarnav-toggle"
    >
      <svg
        fill="none"
        height="10"
        viewBox="0 0 8 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1.1266 5.38862L5.57702 9.83902C5.79166 10.0537 6.13964 10.0537 6.35426 9.83902L6.87333 9.31995C7.0876 9.10568 7.08801 8.75841 6.87424 8.54363L3.34721 4.99999L6.87424 1.45637C7.08801 1.24159 7.0876 0.89432 6.87333 0.680047L6.35426 0.160979C6.13962 -0.0536598 5.79164 -0.0536598 5.57702 0.160979L1.12662 4.61138C0.911981 4.826 0.911981 5.17398 1.1266 5.38862Z"
          fill="#959595"
        />
      </svg>
    </button>
    <div
      class="sc-dkzDqf eDaswd"
    >
      Content
    </div>
  </nav>
  <span
    data-focus-scope-end="true"
    hidden=""
  />
</DocumentFragment>
`;

exports[`SidebarNav toggles nav collapse on button click 2`] = `
<DocumentFragment>
  <span
    data-focus-scope-start="true"
    hidden=""
  />
  <nav
    aria-expanded="false"
    class="sc-bczRLJ fLqWsF sc-jSMfEi collapsed"
    data-testid="sidebarnav"
  >
    <button
      aria-label="Expand navigation"
      class="sc-eCYdqJ eKnMif collapsed"
      data-testid="sidebarnav-toggle"
    >
      <svg
        fill="none"
        height="10"
        viewBox="0 0 8 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.87337 5.38862L2.42295 9.83902C2.20831 10.0537 1.86033 10.0537 1.64571 9.83902L1.12664 9.31995C0.912369 9.10568 0.911957 8.75841 1.12573 8.54363L4.65276 4.99999L1.12573 1.45637C0.911957 1.24159 0.912369 0.89432 1.12664 0.680047L1.64571 0.160979C1.86035 -0.0536598 2.20833 -0.0536598 2.42295 0.160979L6.87335 4.61138C7.08799 4.826 7.08799 5.17398 6.87337 5.38862Z"
          fill="#959595"
        />
      </svg>
    </button>
    <div
      class="sc-dkzDqf eDaswd"
    >
      Content
    </div>
  </nav>
  <span
    data-focus-scope-end="true"
    hidden=""
  />
</DocumentFragment>
`;
